--- a/Bazaar Ghar/StoryBoards/Base.lproj/sidemenu.storyboard
+++ b/Bazaar Ghar/StoryBoards/Base.lproj/sidemenu.storyboard
@@ -4,12 +4,18 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Poppins-Bold.ttf">
+            <string>Poppins-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--MenuVC Base-->
         <scene sceneID="Fai-fY-poc">
@@ -57,8 +63,7 @@
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" backgroundImage="cross"/>
                                         <connections>
-                                            <action selector="crossbtn:" destination="Ood-eq-QxG" eventType="touchUpInside" id="OI3-gT-7mk"/>
-                                            <action selector="dismissViewController:" destination="Ood-eq-QxG" eventType="touchUpInside" id="2Oc-MX-2wI"/>
+                                            <action selector="crossbtn:" destination="Ood-eq-QxG" eventType="touchUpInside" id="UhM-9a-zDj"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YyX-nY-1TF">
@@ -93,10 +98,10 @@
                                                         </userDefinedRuntimeAttributes>
                                                         <variation key="default">
                                                             <mask key="constraints">
-                                                                <exclude reference="US0-69-e22"/>
                                                                 <exclude reference="Hrv-AI-7v5"/>
-                                                                <exclude reference="vPK-wl-dYr"/>
+                                                                <exclude reference="US0-69-e22"/>
                                                                 <exclude reference="3MR-8g-17m"/>
+                                                                <exclude reference="vPK-wl-dYr"/>
                                                             </mask>
                                                         </variation>
                                                         <variation key="heightClass=regular-widthClass=compact">
@@ -418,8 +423,8 @@
                                                             <mask key="constraints">
                                                                 <exclude reference="4Cm-QQ-6Ff"/>
                                                                 <exclude reference="aXw-0B-geR"/>
-                                                                <exclude reference="mek-lt-rap"/>
                                                                 <exclude reference="hjp-hW-mu1"/>
+                                                                <exclude reference="mek-lt-rap"/>
                                                             </mask>
                                                         </variation>
                                                         <variation key="heightClass=regular-widthClass=compact">
@@ -678,6 +683,105 @@
             </objects>
             <point key="canvasLocation" x="1318.3206106870227" y="-742.25352112676057"/>
         </scene>
+        <!--Offers page-->
+        <scene sceneID="d9o-vw-2oX">
+            <objects>
+                <viewController storyboardIdentifier="offers_page" hidesBottomBarWhenPushed="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="D6X-ld-S6w" customClass="offers_page" customModule="Bazaar_Ghar" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LwY-N6-6PC">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mX6-6y-QqO">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="105"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xJK-Ap-epe">
+                                        <rect key="frame" x="5" y="60" width="35" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="35" id="lcJ-Pg-Atm"/>
+                                            <constraint firstAttribute="height" constant="35" id="r17-Je-Qs7"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal">
+                                            <imageReference key="image" image="chevron.backward.circle.fill" catalog="system" symbolScale="large"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="12"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="popViewController:" destination="D6X-ld-S6w" eventType="touchUpInside" id="7Sd-df-sxe"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bazaar Live" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1k-GZ-nSy">
+                                        <rect key="frame" x="144.33333333333334" y="66" width="104.33333333333334" height="23.333333333333329"/>
+                                        <fontDescription key="fontDescription" name="Poppins-Bold" family="Poppins" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSr-Vg-rMM">
+                                        <rect key="frame" x="361" y="66.666666666666671" width="22" height="22"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="22" id="6HF-Op-saB"/>
+                                            <constraint firstAttribute="height" constant="22" id="X2w-dD-dT7"/>
+                                        </constraints>
+                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="online-shopping">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="xJK-Ap-epe" firstAttribute="leading" secondItem="mX6-6y-QqO" secondAttribute="leading" constant="5" id="2gz-zO-Fre"/>
+                                    <constraint firstAttribute="bottom" secondItem="xJK-Ap-epe" secondAttribute="bottom" constant="10" id="6Yf-VJ-0aY"/>
+                                    <constraint firstItem="gSr-Vg-rMM" firstAttribute="centerY" secondItem="xJK-Ap-epe" secondAttribute="centerY" id="J7A-wV-ljU"/>
+                                    <constraint firstItem="H1k-GZ-nSy" firstAttribute="centerX" secondItem="mX6-6y-QqO" secondAttribute="centerX" id="M2o-Wi-KTT"/>
+                                    <constraint firstAttribute="height" constant="105" id="hhr-w6-X1Q"/>
+                                    <constraint firstAttribute="trailing" secondItem="gSr-Vg-rMM" secondAttribute="trailing" constant="10" id="kNa-2G-dci"/>
+                                    <constraint firstItem="H1k-GZ-nSy" firstAttribute="centerY" secondItem="xJK-Ap-epe" secondAttribute="centerY" id="mRb-RN-7id"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3bl-dD-s6m">
+                                <rect key="frame" x="0.0" y="105" width="393" height="713"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Content " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g4w-vg-uhj">
+                                        <rect key="frame" x="134.66666666666666" y="342.66666666666669" width="123.99999999999997" height="27.666666666666686"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="g4w-vg-uhj" firstAttribute="centerX" secondItem="3bl-dD-s6m" secondAttribute="centerX" id="prM-rK-0pD"/>
+                                    <constraint firstItem="g4w-vg-uhj" firstAttribute="centerY" secondItem="3bl-dD-s6m" secondAttribute="centerY" id="uqc-9V-V6w"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="GfN-er-ui5"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3bl-dD-s6m" firstAttribute="leading" secondItem="GfN-er-ui5" secondAttribute="leading" id="8Gv-mj-Vld"/>
+                            <constraint firstItem="3bl-dD-s6m" firstAttribute="top" secondItem="mX6-6y-QqO" secondAttribute="bottom" id="Ptp-t3-DRr"/>
+                            <constraint firstItem="GfN-er-ui5" firstAttribute="trailing" secondItem="mX6-6y-QqO" secondAttribute="trailing" id="Wfx-wA-wEV"/>
+                            <constraint firstItem="GfN-er-ui5" firstAttribute="trailing" secondItem="3bl-dD-s6m" secondAttribute="trailing" id="gPL-Vm-0U4"/>
+                            <constraint firstItem="mX6-6y-QqO" firstAttribute="leading" secondItem="GfN-er-ui5" secondAttribute="leading" id="hjJ-L6-kzl"/>
+                            <constraint firstItem="GfN-er-ui5" firstAttribute="bottom" secondItem="3bl-dD-s6m" secondAttribute="bottom" id="uNi-rO-GyC"/>
+                            <constraint firstItem="mX6-6y-QqO" firstAttribute="top" secondItem="LwY-N6-6PC" secondAttribute="top" id="zxi-bD-DYe"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="headerBackgroudView" destination="mX6-6y-QqO" id="tTS-j0-ZoG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bii-6a-RyP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2226" y="-589"/>
+        </scene>
         <!--Shake View Controller-->
         <scene sceneID="hlr-uJ-ZUk">
             <objects>
@@ -896,8 +1000,10 @@
         <image name="arrow" width="5.3909997940063477" height="9.0819997787475586"/>
         <image name="arrow.forward" catalog="system" width="128" height="95"/>
         <image name="bg" width="80.333335876464844" height="32"/>
+        <image name="chevron.backward.circle.fill" catalog="system" width="128" height="123"/>
         <image name="cross" width="50" height="50"/>
         <image name="facebook_5968764" width="512" height="512"/>
+        <image name="online-shopping" width="19" height="18"/>
         <namedColor name="headercolor">
             <color red="0.023529411764705882" green="0.61568627450980395" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
