--- a/Bazaar Ghar/Cell/MainProductCell/HomeLastProductCollectionViewCell.xib
+++ b/Bazaar Ghar/Cell/MainProductCell/HomeLastProductCollectionViewCell.xib
@@ -31,7 +31,7 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="11a-6U-cj5">
-                        <rect key="frame" x="0.0" y="2" width="151" height="246"/>
+                        <rect key="frame" x="0.0" y="0.0" width="151" height="250"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="17" translatesAutoresizingMaskIntoConstraints="NO" id="kGZ-hI-tgI">
                                 <rect key="frame" x="3" y="3" width="145" height="175"/>
@@ -92,7 +92,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="69" height="27"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10% OFF" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hrb-37-tXk">
-                                        <rect key="frame" x="8.6666666666666679" y="6.6666666666666661" width="51.666666666666657" height="13.999999999999998"/>
+                                        <rect key="frame" x="11.666666666666664" y="5" width="46" height="17"/>
                                         <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -138,26 +138,26 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UrX-MX-iuu">
-                                <rect key="frame" x="3.6666666666666665" y="231" width="0.0" height="0.0"/>
+                                <rect key="frame" x="3.6666666666666665" y="235" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s8r-sI-vcs">
-                                <rect key="frame" x="3.6666666666666665" y="230.66666666666666" width="0.0" height="1"/>
+                                <rect key="frame" x="3.6666666666666665" y="234.66666666666666" width="0.0" height="1"/>
                                 <color key="backgroundColor" systemColor="systemGrayColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="fiK-Wd-D8M"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VRg-cs-t8J">
-                                <rect key="frame" x="3.6666666666666665" y="236" width="0.0" height="0.0"/>
+                                <rect key="frame" x="3.6666666666666665" y="240" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="12"/>
                                 <color key="textColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwA-kf-v6x">
-                                <rect key="frame" x="109" y="202" width="36" height="33"/>
+                                <rect key="frame" x="109" y="206" width="36" height="33"/>
                                 <color key="backgroundColor" red="0.023529411760000001" green="0.71764705880000002" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="33" id="3cP-0A-G0n"/>
@@ -220,10 +220,11 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="11a-6U-cj5" secondAttribute="bottom" constant="2" id="ECb-CO-VFQ"/>
+                    <constraint firstAttribute="bottom" secondItem="11a-6U-cj5" secondAttribute="bottom" id="ECb-CO-VFQ"/>
                     <constraint firstItem="11a-6U-cj5" firstAttribute="leading" secondItem="sSM-ci-14G" secondAttribute="leading" id="OWC-Xs-eca"/>
-                    <constraint firstItem="11a-6U-cj5" firstAttribute="top" secondItem="sSM-ci-14G" secondAttribute="top" constant="2" id="YBj-VQ-Apd"/>
+                    <constraint firstItem="11a-6U-cj5" firstAttribute="top" secondItem="sSM-ci-14G" secondAttribute="top" id="YBj-VQ-Apd"/>
                     <constraint firstAttribute="trailing" secondItem="11a-6U-cj5" secondAttribute="trailing" id="aUX-Pf-l0j"/>
                 </constraints>
                 <userDefinedRuntimeAttributes>
@@ -243,6 +244,11 @@
             </collectionViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <size key="customSize" width="151" height="250"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                    <real key="value" value="10"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="Offbanner" destination="hrb-37-tXk" id="6j9-rk-x2c"/>
                 <outlet property="cartButton" destination="gwA-kf-v6x" id="TeA-OY-Gxe"/>
@@ -266,13 +272,13 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tertiarySystemFillColor">
-            <color red="0.46274509803921571" green="0.46274509803921571" blue="0.50196078431372548" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.46274509800000002" green="0.46274509800000002" blue="0.50196078430000002" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
