--- a/Bazaar Ghar/Cell/ReportTableViewCell.xib
+++ b/Bazaar Ghar/Cell/ReportTableViewCell.xib
@@ -22,9 +22,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="329" height="52"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="9hz-C5-ba9">
-                        <rect key="frame" x="20" y="14.666666666666666" width="25" height="23.666666666666679"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="radio-button-svgrepo-com" translatesAutoresizingMaskIntoConstraints="NO" id="9hz-C5-ba9">
+                        <rect key="frame" x="20" y="13.666666666666664" width="25" height="25"/>
+                        <color key="tintColor" red="0.023529411764705882" green="0.61568627450980395" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="25" id="8og-IV-Id8"/>
                             <constraint firstAttribute="height" constant="25" id="vsk-Yv-82f"/>
@@ -54,6 +54,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="circle" catalog="system" width="128" height="123"/>
+        <image name="radio-button-svgrepo-com" width="800" height="800"/>
     </resources>
 </document>
