--- a/Bazaar Ghar/StoryBoards/Base.lproj/Popups.storyboard
+++ b/Bazaar Ghar/StoryBoards/Base.lproj/Popups.storyboard
@@ -873,32 +873,25 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OHj-fH-LMd">
                                                 <rect key="frame" x="302" y="10" width="36" height="36"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XvG-G4-3Nc">
-                                                        <rect key="frame" x="20" y="0.0" width="16" height="36"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XvG-G4-3Nc">
+                                                        <rect key="frame" x="0.0" y="0.0" width="36" height="36"/>
+                                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                        <state key="normal">
+                                                            <imageReference key="image" image="heart" catalog="system" symbolScale="large"/>
+                                                        </state>
                                                         <connections>
                                                             <action selector="likeaction:" destination="UQr-37-aVG" eventType="touchUpInside" id="D0n-cs-pvB"/>
                                                         </connections>
                                                     </button>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="kw6-vR-ajX">
-                                                        <rect key="frame" x="8.3333333333333126" y="10.333333333333325" width="19.333333333333329" height="16.333333333333336"/>
-                                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="19.449999999999999" id="htL-Rz-L8V"/>
-                                                            <constraint firstAttribute="width" constant="19.449999999999999" id="tvx-Yr-qWA"/>
-                                                        </constraints>
-                                                    </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.8862745098" green="0.8862745098" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="36" id="6uo-Cq-i5Y"/>
-                                                    <constraint firstItem="kw6-vR-ajX" firstAttribute="centerX" secondItem="OHj-fH-LMd" secondAttribute="centerX" id="AOk-iT-3ux"/>
-                                                    <constraint firstItem="XvG-G4-3Nc" firstAttribute="leading" secondItem="OHj-fH-LMd" secondAttribute="leading" constant="20" symbolic="YES" id="HI3-Vr-VLD"/>
+                                                    <constraint firstItem="XvG-G4-3Nc" firstAttribute="leading" secondItem="OHj-fH-LMd" secondAttribute="leading" id="HI3-Vr-VLD"/>
                                                     <constraint firstAttribute="width" constant="36" id="IxB-oq-exh"/>
                                                     <constraint firstItem="XvG-G4-3Nc" firstAttribute="top" secondItem="OHj-fH-LMd" secondAttribute="top" id="jjK-lF-Qh4"/>
                                                     <constraint firstAttribute="trailing" secondItem="XvG-G4-3Nc" secondAttribute="trailing" id="pS9-Sd-h94"/>
-                                                    <constraint firstItem="kw6-vR-ajX" firstAttribute="centerY" secondItem="OHj-fH-LMd" secondAttribute="centerY" id="wYk-c6-UBJ"/>
                                                     <constraint firstAttribute="bottom" secondItem="XvG-G4-3Nc" secondAttribute="bottom" id="ydx-Nz-r56"/>
                                                 </constraints>
                                                 <userDefinedRuntimeAttributes>
@@ -958,12 +951,12 @@
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="rating">
-                                                <real key="value" value="2"/>
+                                                <real key="value" value="4"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2.0 (400 reviews)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SBq-62-A8E">
-                                        <rect key="frame" x="145" y="271" width="107.66666666666669" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.0 (2 reviews)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SBq-62-A8E">
+                                        <rect key="frame" x="145" y="271" width="92.333333333333314" height="17"/>
                                         <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="12"/>
                                         <color key="textColor" red="0.21176470589999999" green="0.27058823529999998" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -1070,6 +1063,7 @@
                         <outlet property="addToCartBtn" destination="uY2-Wn-nnc" id="icT-qL-Ca6"/>
                         <outlet property="crossBtn" destination="10I-UX-3VZ" id="baO-IJ-UbB"/>
                         <outlet property="discountPrice" destination="JcL-yl-Hn3" id="Zao-Ql-6pj"/>
+                        <outlet property="heartBtn" destination="XvG-G4-3Nc" id="d6X-t5-xVt"/>
                         <outlet property="outOfStockLbl" destination="Ykp-Hd-iLY" id="ypW-6f-61y"/>
                         <outlet property="productImage" destination="LUN-lD-TTl" id="mXl-aL-z8H"/>
                         <outlet property="productNamel" destination="88i-PN-PEb" id="tm8-dI-zHB"/>
@@ -1759,7 +1753,7 @@
         <image name="close" width="24" height="24"/>
         <image name="cross" width="50" height="50"/>
         <image name="google.png" width="18" height="18"/>
-        <image name="heart.fill" catalog="system" width="128" height="107"/>
+        <image name="heart" catalog="system" width="128" height="107"/>
         <image name="nointerner" width="226.531005859375" height="178.78599548339844"/>
         <image name="orderplace" width="140" height="140"/>
         <image name="phone" width="14.399999618530273" height="24"/>
@@ -1773,34 +1767,34 @@
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.18823529410000001" green="0.69019607839999997" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tintColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
