video view fixes

--- a/Bazaar Ghar/StoryBoards/Base.lproj/VideoStoryBoard.storyboard
+++ b/Bazaar Ghar/StoryBoards/Base.lproj/VideoStoryBoard.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -2629,7 +2629,7 @@
                         <viewLayoutGuide key="safeArea" id="wbz-3D-CZA"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="wbz-3D-CZA" firstAttribute="top" secondItem="BM1-iR-Hu9" secondAttribute="top" id="E8b-uH-uTX"/>
+                            <constraint firstAttribute="top" secondItem="BM1-iR-Hu9" secondAttribute="top" constant="-59" id="E8b-uH-uTX"/>
                             <constraint firstAttribute="bottom" secondItem="BM1-iR-Hu9" secondAttribute="bottom" id="F4G-ev-8f5"/>
                             <constraint firstItem="BM1-iR-Hu9" firstAttribute="leading" secondItem="bAA-59-aiL" secondAttribute="leading" id="ZOP-Y2-aJl"/>
                             <constraint firstAttribute="trailing" secondItem="BM1-iR-Hu9" secondAttribute="trailing" id="dIt-hS-Ccd"/>
